--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Background Transition</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="intro-text">
+        <h1>Visual Beauty</h1>
+        <p>Change color smoothly</p>
+      </div>
+    </header>
+    <section>
+      <div class="page2">
+        <h1>Welcome to white Background</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi,
+          ratione!
+        </p>
+      </div>
+      <img src="./pexels-moose-photos-1037999.jpg" alt="" />
+    </section>
+    <script src="app.js"></script>
+  </body>
 </html>
